[gd_scene load_steps=8 format=3 uid="uid://c1ph5cok74t23"]

[ext_resource type="Script" path="res://Scripts/knight_scr.gd" id="1_7ava8"]
[ext_resource type="Texture2D" uid="uid://eqgq3qbnj332" path="res://Sprites/knight copy.png" id="2_rqvkd"]

[sub_resource type="AtlasTexture" id="AtlasTexture_dm7at"]
atlas = ExtResource("2_rqvkd")
region = Rect2(0, 0, 161, 200)

[sub_resource type="SpriteFrames" id="SpriteFrames_s8wno"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dm7at")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fanb2"]
size = Vector2(1000, 200)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ckk8m"]
size = Vector2(200, 146)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_44rkc"]
size = Vector2(68, 80)

[node name="Knight" type="Node2D"]
scale = Vector2(0.5, 0.5)
script = ExtResource("1_7ava8")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_s8wno")

[node name="BehaviourTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="AgroArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AgroArea"]
position = Vector2(33, 0)
shape = SubResource("RectangleShape2D_fanb2")

[node name="AttackArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(-40, 0)
shape = SubResource("RectangleShape2D_ckk8m")
debug_color = Color(0.997531, 0, 0.163863, 0.42)

[node name="DamageArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
position = Vector2(-40, 0)
shape = SubResource("RectangleShape2D_ckk8m")
disabled = true
debug_color = Color(0.997531, 0, 0.163863, 0.42)

[node name="KnightBody" type="CharacterBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="KnightBody"]
position = Vector2(24, 0)
shape = SubResource("RectangleShape2D_44rkc")

[connection signal="timeout" from="BehaviourTimer" to="." method="_on_behaviour_timer_timeout"]
[connection signal="body_entered" from="AgroArea" to="." method="_on_agro_area_body_entered"]
[connection signal="body_exited" from="AgroArea" to="." method="_on_agro_area_body_exited"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="body_entered" from="DamageArea" to="." method="_on_damage_area_body_entered"]
[connection signal="body_entered" from="DamageArea" to="." method="_on_attack_area_body_entered"]
